# Projekt-PO

./: .gitignore  Button.cpp  Button.h  CMakeLists.txt  CloseButton.h  CloseWindow.cpp  CloseWindow.h  Color.cpp  Color.h  Desktop.cpp  Desktop.h  DragAndDropButton.cpp  DragAndDropButton.h  DragAndDropInterface.h  Element.cpp  Element.h  Icon.h  Label.cpp  Label.h  MoveWindowBar.cpp  MoveWindowBar.h  Point.h  Pulpit.cpp  Pulpit.h  QuitButton.h  ResizeWindowBar.cpp  ResizeWindowBar.h  SDL_Main.cpp  SDL_Main.h  Surface.cpp  Surface.h  TextBox.cpp  TextBox.h  TextInputInterface.h  TextWindow.cpp  TextWindow.h  Window.cpp  Window.h  WindowItemInterface.h  WindowTextBox.cpp  (+3 more)
